--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,9 @@ rabbitmq:
   dns: 127.0.0.1
   hostname: rabbitmq
   container_name: rabbitmq
+  environment:
+   - RABBITMQ_VHOSTS=sensu:sensu:pass
   links:
-  - consul:consul
+   - consul:consul
   privileged: true
 
