add RMQ startup

--- a/etc/supervisord.d/rabbitmq.ini
+++ b/etc/supervisord.d/rabbitmq.ini
@@ -1,5 +1,5 @@
 [program:rabbitmq]
-command=rabbitmq-server
+command=/opt/qnib/rabbitmq/bin/start.sh
 redirect_stderr=true
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
 autorestart = true
